syntax = "proto3";

option java_package = "com.programmersbox.uiviews";
option java_multiple_files = true;

message Settings {
  SystemThemeMode themeSetting = 1;
  bool shouldCheckUpdate = 2;
  int32 batteryPercent = 3;
  bool shareChapter = 4;
  bool showAll = 5;
  int32 historySave = 6;
}

enum SystemThemeMode {
  FollowSystem = 0;
  Day = 1;
  Night = 2;
}
